# qi

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  LINUX.md  MCP_FINAL_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SHORT_TERM_IMPROVEMENTS.md  MODULES_IMPLEMENTATION.md  PROJECT_STATUS.md  Qi语言关键字和保留字完整列表.md  README.md  RUNTIME_INTEGRATION.md  TASK_COMPLETION.md  TEST_RESULTS.md  build.rs  debug_linux.sh  quick_test.sh  test.qi  test_compile_run.sh  test_examples.sh  test_linux_fix.sh  test_string_compare.qi  verify_linux_fix.sh  中文标识符解析问题分析报告.md  示例文件保留关键字修复报告.md  示例测试报告.md  问题解决方案-最终版.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ASYNCDESIGN.md  ASYNC_RUNTIME_IMPLEMENTATION.md  CLI库语言对比.md  CLI标准库实施计划.md  DEBUG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_SPEC.md  LSP.md  MCP_SERVER_MODULE.md  NEWDESIGN.md  QI_LANGUAGE_DESIGN.md  QUICK_START_ZH.md  Qi语言完整指南.md  RUNTIME_GUIDE.md  RUNTIME_INTEGRATION.md  RUNTIME_SPEC.md  async-runtime-research.md  async_runtime.md  debugging.md  error_examples.md  qi-unified-design-zh-cn.md  qifmt格式化规范.md  rust-runtime-research.md  stdlib_cli_design.md  内存管理.md  内存管理实施验证报告.md  基础语法规范.md  实现计划-模块导入系统.md  实现记录-加密模块.md  并发功能验证报告.md  异步vs协程分析.md  异步协程完整状态.md  快速参考.md  未来类型实现完成总结.md  未来类型实现进度.md  未来类型设计.md  标准库-加密模块.md  设计-标准库导入策略.md  语言规范.md  (+1 more)
docs/qi-unified-design/: 01-overview.md  02-language-reference.md  03-compiler-runtime.md  04-implementation-and-tooling.md  README.md
docs/示例/: 01_基本程序结构.qi  02_变量和类型.qi  03_条件语句.qi  04_循环语句.qi  05_函数定义.qi  06_类型系统.qi  07_枚举类型.qi  08_运算符.qi  09_指针操作.qi  10_异步编程.qi  11_模式匹配.qi  12_错误处理.qi  13_闭包.qi  14_内联函数.qi  15_常量声明.qi  16_方法定义.qi  17_浮点数运算.qi  18_递归函数.qi  19_字符串操作.qi  20_布尔运算.qi
examples/: 01_hello_world.qi  02_variables.qi  03_functions.qi  README_mac_demo.md  async_runtime_demo.rs  basic_functions.qi  chinese_string_test.qi  chinese_struct_test.qi  comment_if_test.qi  complete_comments_test.qi  complete_struct_test.qi  comprehensive_boolean_test.qi  control_flow_demo.qi  control_flow_examples.qi  debug_cli.rs  debug_comment_test.qi  debug_comparison.qi  debug_if_test.qi  debug_lexer_test.rs  debug_test.qi  debug_test3.qi  demo.qi  demo_complete.qi  fibonacci.qi  final_comment_demo.qi  final_demo.qi  function_examples.qi  functions.qi  hello.qi  hello_world.qi  hello_world_clean.qi  hello_world_fixed.qi  hello_world_with_comments.qi  if_test.qi  mac_demo_instructions.md  mac_demo_simple.qi  multi_param_test.qi  nested_comment_test.qi  run_examples.sh  runtime_test.qi  (+24 more)
examples/advanced/: chinese_identifiers_demo.qi  chinese_param_test.qi  comment_test.qi  comment_with_code.qi  comments_test.qi  complete_chinese_test.qi  complete_test.qi  complex_function_call_test.qi  comprehensive_demo.qi  comprehensive_function_test.qi  comprehensive_param_test.qi  control_flow.qi  control_flow_test.qi  doc_comment_test.qi  final_comments_demo.qi  final_param_demo.qi  for_test.qi  mac_demo.qi  nested_control_demo.qi  param_only_test.qi  single_param_test.qi  string_test.qi  struct_enum_test.qi  struct_test2.qi  test_logical.qi  test_simple_recursion.qi  test_single_func.qi  test_two_funcs.qi
examples/basic/: async_basic.qi  branching.qi  calculations.qi  control_flow_comprehensive.qi  demo.qi  for_loop.qi  greet.qi  hello_world.qi  loop.qi  method.qi  numbers.qi  runtime_functions_test.qi  runtime_test.qi  showcase.qi  simple_chinese_test.qi  simple_comment_test.qi  simple_control_demo.qi  simple_control_flow_demo.qi  simple_demo.qi  simple_function_call_test.qi  simple_param_test.qi  simple_runtime_test.qi  simple_test.qi  simple_typed_var.qi  struct_example.qi  struct_methods.qi  struct_test.qi  test_basic_var.qi  test_binary.qi  test_comparisons.qi  test_complete.qi  test_for.qi  test_if.qi  test_simple2.qi  test_type_annotation.qi  test_typed_vars.qi  test_while.qi  test_with_comment.qi  test_working.qi
examples/debug/: debug_array.qi  debug_array_access.qi  debug_boolean.qi  debug_call.qi  debug_chinese.qi  debug_chinese_full.qi  debug_function.qi  debug_simple_comment.qi  debug_undefined.qi  debug_undefined_no_comment.qi
examples/errors/: test_enhanced_errors.qi  test_undefined_var.qi
examples/functions/: function_call_test.qi  function_parameters.qi  function_test.qi  test_colon_return.qi  test_english_function.qi  test_english_var.qi  test_func_call.qi  test_func_params.qi  test_function_codegen.qi  test_function_no_return.qi  test_function_symbol_table.qi  test_no_return.qi  (+8 more)
include/: qi_gui.h
scripts/: README.md  check_runtime_status.sh  compare_runtime.sh  install.ps1  install.sh  quick_verify.sh  run_examples.ps1  run_examples.sh  run_io_tests.sh  verify_runtime.sh
src/: lib.rs  main.rs  package.rs
tests/: README.md  async_parser_test.rs  async_runtime_tests.rs  codegen_tests.rs  control_flow_tests.rs  diagnostics_tests.rs  end_to_end_test.rs  integration_tests.rs  integration_tests.rs.backup  integration_tests.rs.bak  lexer_tests.rs  module_tests.rs  parser_tests.rs  semantic_tests.rs
(+402 files in other folders)
