[package]
name = "qi-compiler"
version = "2026.424.1"
edition = "2021"
authors = ["Qi Language Team <team@qi-lang.org>"]
description = "A compiler for the Qi programming language with 100% Chinese keywords"
license = "MIT"
repository = "https://github.com/qi-lang/qi-compiler"
homepage = "https://qi-lang.org"
rust-version = "1.75"

[[bin]]
name = "qi"
path = "src/main.rs"

[lib]
name = "qi_compiler"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# LALRPOP parser generator
lalrpop-util = { version = "0.22.2", features = ["lexer"] }

# LLVM bindings for code generation (optional for now)
inkwell = { version = "0.6.0", features = ["llvm15-0"], optional = true }


# Unicode support for Chinese characters
unicode-xid = "0.2.4"

# Error reporting and diagnostics
ariadne = "0.4.0"

# Command line argument parsing
clap = { version = "4.5.50", features = ["derive"] }

# Logging and configuration
log = "0.4.20"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.8"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["blocking", "json"] }

# File handling and path management
glob = "0.3.1"
walkdir = "2.4.0"
dirs = "5.0.1"

# Performance measurement
criterion = { version = "0.7.0", optional = true }

# Testing utilities
tempfile = { version = "3.23.0", optional = true }

# Error handling
thiserror = "1.0.69"
anyhow = "1.0.86"

# Global state
once_cell = "1.21.3"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# UUID generation
uuid = { version = "1.10.0", features = ["v4", "serde"] }

# Property-based testing
proptest = { version = "1.5.0", optional = true }

# Cross-platform memory management
crossbeam = "0.8.4"

# System calls for FFI
libc = "0.2.158"

# CPU core count detection
num_cpus = "1.16.0"

# Additional serialization support
chrono = { version = "0.4.38", features = ["serde"] }

# Regular expressions for optimization
regex = "1.10.0"

# Cryptography
sha2 = "0.10.8"
sha1 = "0.10.6"
md-5 = "0.10.6"
base64 = "0.22.0"
hmac = "0.12.1"

# Random number generation
rand = "0.8"

# Configuration file formats
ini = "1.3"
configparser = "3.1"

# Compression
flate2 = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
lazy_static = "1.5"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.23.0"

[build-dependencies]
lalrpop = "0.22.2"
cc = "1.1"

[features]
default = []
benchmarks = ["criterion"]
integration-tests = ["tempfile"]
llvm = ["inkwell"]
